# blog-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  deploy.sh  lambdaweb.Dockerfile  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
raw/: a-square-is-a-rectangle.md  abilities-by-birth.md  about.md  accidentally-coupled.md  ad-hoc-polymorphism.md  blog-architecture.md  blog-rewrite-in-rust.md  cdd-grandfather-paradox.md  cdd-the-story-of-2-exceptions.md  class-and-functions-dont-mix.md  composition-how-go-python-and-haskell.md  composition-over-aggregation-not-just-inheritance.md  const-lifted.md  constructive-code.md  contravariant.md  conways-game-of-life-in-TYPEscript.md  correct-or-boring-this-is-the-typescript-kind-of-question.md  curious-kotlin-union.md  dependent-types-typescript-seriously.md  dishonest-code-void-vs-unit.md  dont-close-what-is-open.md  effect-in-effect.md  fake-generics-the-anti-pattern.md  final-encoding-void.md  generics-id-and-absurd.md  generics-keep-it-generic.md  geometric-beauty-of-code-design.md  go-lang-dependency-injection-true-composition.md  go-lang-error-handling.md  i-fought-the-law-and-the-law-won.md.rs  interface-segregation-and-the-down-principle.md  its-different-in-typescript.md  kotlin-gadt.md  law-one.md  libraries-should-not-provide-interfaces.md  manifest.json  null-undefined-and-patch-maybe-maybe.md  one-recursion-for-all.md  opaque-code.md  parsec-aoc.md  (+25 more)
sample/: ContextManager.csx  bounded.cs  bounded.kt  bounded.py  bounded.ts  constructors.py  conway.js  (+25 more)
(+7 files in other folders)
